// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreLocatorBlockSave component matches snapshot with default attributes 1`] = `
<DocumentFragment>
  <div
    data-api-key=""
    data-initial-center="{"lat":0,"lng":0}"
    data-theme="{"primary_color":"#ffffff"}"
    data-zoom="13"
    id="storeLocatorWidget"
    style="height: 300px;"
  />
</DocumentFragment>
`;

exports[`StoreLocatorBlockSave component matches snapshot with provided attributes 1`] = `
<DocumentFragment>
  <div
    data-api-key="your-api-key"
    data-initial-center="{"lat":51.5074,"lng":0.1278}"
    data-theme="{"primary_color":"#ffffff"}"
    data-zoom="15"
    id="storeLocatorWidget"
    style="height: 400px;"
  />
</DocumentFragment>
`;
